HTML page that displays a header, a footer, a filter box (dropdown list) and the result of the search

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -75,7 +75,7 @@
 						<div class="number_rooms">3 bedrooms</div>
 						<div class="number_bathrooms">2 bathrooms</div>
 					</div>
-					<div class="user"> <strong>Owner:</strong> Gershom Ochanda </div>
+					<div class="user"> <strong>Owner:</strong> Bill Zuckerberg </div>
 					<div class="description">Newly renovated spacious 2 bedrooms 2 baths in cozy Gastown style unit with the view of North Shone mountains. Woodward’s landmark building situated at the historic heart of Vancouver.</div>
 				</article>
 			</section>
